--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,14 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+#api_status {
+  float: right;	
+  border-radius: 50%;
+  background-color: #ccc;
+  height: 40px;
+  margin-right: 20px;
+  width: 40px;
+}
+#api_status.available {
+  background-color: #FF0000;
+}
