--- a/web_dynamic/templates/4-hbnb.html
+++ b/web_dynamic/templates/4-hbnb.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="UTF-8">
+
     <link rel="stylesheet" type="text/css" href="../static/styles/4-common.css?{{ cache_id }}">
     <link rel="stylesheet" type="text/css" href="../static/styles/3-header.css?{{ cache_id }}">
     <link rel="stylesheet" type="text/css" href="../static/styles/3-footer.css?{{ cache_id }}">
     <link rel="stylesheet" type="text/css" href="../static/styles/6-filters.css?{{ cache_id }}">
     <link type="text/css" rel="stylesheet" href="../static/styles/8-places.css?{{ cache_id }}">
     <link rel="icon" href="../static/images/icon.png?{{ cache_id }}" />
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="../static/scripts/4-hbnb.js?{{ cache_id }}"></script>
+
+    <!-- Import JQUERY -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" ></script>
+    <script src="{{ url_for('static', filename='scripts/4-hbnb.js') + '?' + cache_id }}"></script>
+
+
     <title>HBnB</title>
   </head>
   <body>
     <header>
-      <div class="logo"></div>
       <div id="api_status"></div>
+      <div class="logo"></div>
     </header>
     <div class="container">
       <section class="filters">
@@ -44,9 +50,8 @@
 	    <ul>
 	      {% for amenity in amenities %}
 	      <li>
-		<input type="checkbox" style="margin-left: 10px;" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}">
-		{{ amenity.name }}
-	      </li>
+				  <input type="checkbox" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}"></input>
+				  {{ amenity.name }}</li>
 	      {% endfor %}
 	    </ul>
 	  </div>
