--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -5,6 +5,7 @@
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
+    overflow-wrap: break-word;
 }
 button {
     position: absolute;
